--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
     <title>Unit Conversion App</title>
 </head>
 <body>
-    <h1>Unit Conversion App</h1>
+    <main class="container">
+        <section class="unit-conversion-container">
+            <h1>Metric/Imperial Unit Conversion</h1>
+            <input type="text" id="unit-input-el">
+            <button type="submit" id="convert-btn">Convert</button>
+        </section>
+        <button id="toggle-theme">Dark Mode</button>
+        <section>
+            <div class="unit-result-container unit-result">
+                <h3>Length (Meter/Feet)</h3>
+                <p id="length-result">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+            </div>
+            <div class="unit-result-container">
+                <h3>Volume (Liters/Gallons)</h3>
+                <p id="length-result">20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+            </div>
+            <div class="unit-result-container">
+                <h3>Mass (Kilograms/Pounds)</h3>
+                <p id="length-result">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+            </div>
+        </section>
+    </main>
+
 
 
 
