--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <section>
             <div class="unit-result-container unit-result">
                 <h3>Length (Meter/Feet)</h3>
-                <p id="length-result">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <p id="length-el">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
             </div>
             <div class="unit-result-container">
                 <h3>Volume (Liters/Gallons)</h3>
-                <p id="length-result">20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+                <p id="length-el">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
             </div>
             <div class="unit-result-container">
                 <h3>Mass (Kilograms/Pounds)</h3>
-                <p id="length-result">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+                <p id="length-el">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
             </div>
         </section>
     </main>
