--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
             <div class="unit-result-container">
                 <h3>Volume (Liters/Gallons)</h3>
-                <p id="length-el">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
+                <p id="volume-el">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
             </div>
             <div class="unit-result-container">
                 <h3>Mass (Kilograms/Pounds)</h3>
-                <p id="length-el">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
+                <p id="mass-el">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
             </div>
         </section>
     </main>
